Other project tweaks needed to make JDK11 work.
Cook launches, passes some integration tests (not run full suite, authentiracot stale)
Passes unit test.